crates/aether-actor-derive/tests/ui/rejects_accessor_without_state.stderr
error: `dehydrate` / `rehydrate` are the ADR-0113 persistence accessors and require a `type State = …` declaration; add it, or rename the method if it is an unrelated helper
  --> tests/ui/rejects_accessor_without_state.rs:44:5
   |
44 | /     fn dehydrate(&self) -> CounterState {
45 | |         CounterState { count: self.count }
46 | |     }
   | |_____^
